# NN-Game1

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  30_BUGS_LIST.md  30_MORE_BUGS_LIST.md  ADDITIONAL_BUGS.md  BUGS_AND_IMPROVEMENTS.md  BUGS_TO_FIX.md  CC_NN_CLEANUP_AUDIT.md  CC_NN_EXPERIMENT_TRACKER.md  CC_NN_EXTENSION_ARCHITECTURE.md  CC_NN_HANDOFF.md  CC_NN_METRICS_PROGRESS_REVIEW.md  CC_NN_RUN_INFO_RESULTS.md  CC_NN_RUN_INFO_TASKS.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  NEW_BUGS_FOUND.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_QUICK_REFERENCE.md  PHASE2_BACKEND_SUMMARY.md  PLANNING.md  POTENTIAL_BUGS.md  PROGRESS_REPORT.md  README.md  SPACE_INVADERS_AI_IMPROVEMENTS.md  VECTORIZED_SPACE_INVADERS_PLAN.md  benchmark.py  config.py  constraints.txt  evaluate_checkpoints.py  experiment_runner.py  fix_claude.sh  main.py  mypy.ini  package-lock.json  package.json  pyproject.toml  (+2 more)
.Codex/: bug-hunt-20-followup.md  bug-hunt-20.md  crystal-caves-levelgen-spec.md  crystal-caves-reference-visual-backlog.md  crystal-caves-visual-fidelity-plan.md  frontend-architecture-expansion-2026-06-16.md  grade-report.md  nn-crystal-caves-grade-2026-06-24.md  nn-performance-grade-2026-07-07.md  tech-debt-current-changes.md
.github/: dependabot.yml
.github/scripts/: check_audit_waivers.py  check_dependency_files.py  check_file_size.py  check_release_config.py  check_repo_hygiene.py  run_dependency_audit.py  run_ruff.py
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  pr-title-lint.yml  release.yml
docs/: architecture.md
docs/cc_nn_experiment_tracker/: b_series_route_mastery.md  findings_2026_06_23_part1.md  findings_2026_06_24_part1.md  findings_2026_06_24_part2.md
experiments/: README.md  ab_tutorial.py  cc_status_session.py  drill_train.py
experiments/cc_status/: CAMPAIGN_LOG.md  DECISION_BRIEF.md  EVAL_PIPELINE_AUDIT.md  HAZARD_EXIT_AUDIT.md  IMPROVEMENT_PLAN.md  LEVEL_COMPARISON_EVAL.md  LEVEL_FIDELITY_AUDIT.md  M4_RUNBOOK.md  NAV_EXPANSION_BRIEF.md  NEXT_PHASE.md  PERF_PLAN.md  RUN_LOG.md  __init__.py  aggregate_diag.py  analyze_end_reasons.py  artifacts.py  audit_levels.py  bench_net.py  big_exam.py  cc1_decode.py  cli.py  cli_args.py  cli_helpers.py  cli_label_modes.py  common.py  compare_originals.py  compass_audit.py  config_helpers.py  contact_head.py  contact_label_audit.py  correction_calibration.py  corrections.py  demo_collect.py  demo_extract.py  demo_planners.py  diagnose_completion.py  diagnose_gap.py  evals.py  go_explore.py  human_demos.py  (+23 more)
models/: .gitkeep
scripts/: bootstrap_dev.py  gen_crystal_cave.py  play_asteroids.py  render_crystal_caves_gallery.py  train_crystal_curriculum.sh  train_crystal_difficulty_curriculum.sh
src/: __init__.py
src/ai/: __init__.py  action_margin_loss.py  agent.py  agent_experiments.py  agent_metadata.py  agent_persistence.py  demo_learning.py  evaluator.py  extension_contracts.py  network.py  prioritized_n_step.py  replay_buffer.py  (+1 more)
tests/: __init__.py  conftest.py  test_agent.py  test_agent_experiments.py  test_agent_persistence_contracts.py  test_app_model_service.py  test_asteroids.py  test_cc_status_artifacts.py  test_cc_status_contact_head.py  test_cc_status_corrections.py  test_cc_status_diagnose_metrics.py  test_cc_status_helpers.py  test_cc_status_metric_audit.py  test_cc_status_paired_ab.py  test_cc_status_promotion.py  test_cc_status_recipes.py  test_cc_status_record_play.py  test_cc_status_reports.py  test_cc_status_reward_shaping.py  test_cc_status_rollup_metrics.py  test_cc_status_round2.py  test_cc_status_scorecard.py  test_cc_status_session.py  test_checkpoint_catalog.py  test_checkpoint_loader.py  test_cli.py  test_config.py  test_crystal_caves.py  test_crystal_caves_audio.py  test_crystal_caves_drills.py  test_crystal_caves_enemy_motion.py  test_crystal_caves_gen.py  test_crystal_caves_generation.py  test_crystal_caves_handcrafted.py  test_crystal_caves_import.py  test_crystal_curriculum.py  test_dashboard_bindings.py  test_demo_learning.py  test_demo_opening.py  test_demo_recorder.py  (+38 more)
(+146 files in other folders)
