[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nn-game1"
version = "1.0.0"
description = "Deep Q-learning agents for classic arcade games with a live training dashboard."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pygame>=2.5.0",
    "matplotlib>=3.7.0",
    "Pillow>=10.0.0",
    "tqdm>=4.65.0",
    "dataclasses-json>=0.6.0",
]

[project.optional-dependencies]
web = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "eventlet>=0.35.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
nn-game = "main:main"

[tool.setuptools]
py-modules = ["main", "config", "benchmark", "evaluate_checkpoints", "experiment_runner"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"src.web" = ["templates/*.html", "static/*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "experiments/run_*",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
markers = [
    "slow: marks tests as slow",
    "torch: requires PyTorch",
    "pygame: requires pygame",
    "web: requires Flask/SocketIO dashboard dependencies",
]
