[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nn-game1"
version = "0.0.4"
description = "Deep Q-learning agents for classic arcade games with a live training dashboard."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pygame>=2.6.1",
    "matplotlib>=3.7.0",
    "Pillow>=12.2.0",
    "tqdm>=4.67.3",
    "dataclasses-json>=0.6.0",
]

[project.optional-dependencies]
web = [
    "flask>=3.1.3",
    "flask-socketio>=5.3.0",
    "eventlet>=0.41.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "build>=1.2.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pip-audit>=2.7.0",
    "python-semantic-release>=9.21.0",
    "ruff>=0.4.0",
]

[project.scripts]
nn-game = "main:main"









[tool.setuptools]
py-modules = ["main", "config", "benchmark", "evaluate_checkpoints", "experiment_runner"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"src.web" = ["templates/*.html", "static/*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "experiments/run_*",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501"]

[tool.semantic_release]
# Keep Python package metadata and the plaintext VERSION file aligned. Release
# commits are driven by Conventional Commit PR titles on main.
version_toml = [
    "pyproject.toml:project.version",
    "pyproject.toml:tool.semantic_release.version",
]
version = "0.0.4"
branch = "main"
tag_format = "v{version}"
upload_to_pypi = false
assets = ["VERSION"]
build_command = "printf '%s\\n' \"$NEW_VERSION\" > VERSION"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "feat",
    "fix",
    "perf",
    "refactor",
    "docs",
    "style",
    "test",
    "build",
    "ci",
    "chore",
    "revert",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
markers = [
    "slow: marks tests as slow",
    "torch: requires PyTorch",
    "pygame: requires pygame",
    "web: requires Flask/SocketIO dashboard dependencies",
]

[tool.coverage.run]
omit = [
    "main.py",
    "src/app/headless.py",
    "src/app/interactive.py",
    "src/app/process_control.py",
    "src/game/menu.py",
    "src/visualizer/pause_menu.py",
]
